<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FaqFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/box_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="198dp"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/logo"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:text="FAQ"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.444" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/box_header">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/box_header">


                <TextView
                    android:id="@+id/tvQ_howItWork"
                    style="@style/faqTextQt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q_how_it_work"
                    />

                <TextView
                    android:id="@+id/tv_howItWork_1"
                    style="@style/faqTextAnswer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_how_it_work_1" />

                <TextView
                    android:id="@+id/tv_howItWork_2"
                    style="@style/faqTextAnswer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_how_it_work_2" />
                <TextView
                    android:id="@+id/tv_howItWork_3"
                    style="@style/faqTextAnswer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_how_it_work_3" />
                <TextView
                    android:id="@+id/tv_howItWork_4"
                    style="@style/faqTextAnswer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_how_it_work_4"
                    />
                <TextView
                    android:id="@+id/tv_howItWork_5"
                    style="@style/faqTextAnswer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_how_it_work_5"
                    />
                <TextView
                    android:id="@+id/tvQ_howAddNewBudget"
                    style="@style/faqTextQt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q_how_add_new_budget" />

                <TextView
                    android:id="@+id/tv_howAddNewBudget"
                    style="@style/faqTextAnswer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_how_add_new_budget" />
                <TextView
                    android:id="@+id/tvQ_usePluMinus"
                    style="@style/faqTextQt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q_how_use_plus_minus" />
                <TextView
                    android:id="@+id/tv_useMinus"
                    style="@style/faqTextAnswer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_how_use_minus" />
                <TextView
                    android:id="@+id/tv_usePlus"
                    style="@style/faqTextAnswer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_how_use_plus" />
                <TextView
                    android:id="@+id/tvQ_whyGraphScreenEmpty"
                    style="@style/faqTextQt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q_why_graph_screen_empty" />

                <TextView
                    android:id="@+id/tv_whyGraphScreenEmpty"
                    style="@style/faqTextAnswer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_why_graph_screen_empty" />

                <TextView
                    android:id="@+id/tvQ_aboutAdds"
                    style="@style/faqTextQt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q_aboutAdds" />
                <TextView
                    android:id="@+id/tv_aboutAdds"
                    style="@style/faqTextAnswer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_about_adds"
                    android:layout_marginBottom="70dp"/>


            </LinearLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>