<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/green">

        <TextView
            android:id="@+id/tv_headText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:text="@string/text_head"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <EditText
        android:id="@+id/et_budgetSum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/selector_et_input"
        android:ems="10"
        android:drawableStart="@drawable/selector_alert_icon_sum"
        android:drawablePadding="12dp"
        android:hint="@string/hint_budget_sum"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColor="@color/green"
        android:padding="10dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_errorSum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="10dp"
        android:text="@string/text_error_sum"
        android:textColor="@color/red"
        android:visibility="gone" />

    <EditText
        android:id="@+id/et_budgetDays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/selector_et_input"
        android:ems="10"
        android:drawableStart="@drawable/selector_alert_icon_calendar"
        android:drawablePadding="12dp"
        android:hint="@string/hint_budget_days"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_errorDays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="10dp"
        android:text="@string/text_error_days"
        android:textColor="@color/red"
        android:visibility="gone" />


</LinearLayout>